# esp32s3-sense-cam

./: .gitignore  Cargo.toml  README.md  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
examples/: webserver.rs
src/: config.rs  espcam.rs  main.rs  wifi_config.rs.example  wifi_handler.rs
